app/assets/stylesheets/books.scss
// Place all the styles related to the Books controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.book-info strong {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 1cm;
  font-weight: bold;
  font-size: 15pt;
}

.book-info {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 1cm;
  font-size: 15pt;
}

.note i {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 1cm;
  font-size: 10pt;
}

.show-title {
  text-align: center;
  font-family: 'Open Sans Condensed', sans-serif;
  font-weight: 500;
  font-size: 40pt;
}

.book-info ul {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 2cm;
  font-size: 15pt;
}


a.load-comments, .all-comments strong {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 2cm;
  font-size: 15pt;
  list-style-type: none;
}

a.load-authors, .book-authors strong {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 2cm;
  font-size: 15pt;
  float: left;
  border:0;
}

.book-genres strong, a.load-genres {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 2cm;
  font-size: 15pt;
  list-style-type: none;
  float:left;
  border:1px;
}


.book-authors li, .book-genres li {
  font-family: 'Open Sans Condensed', sans-serif;
  float: left;
  font-size: 15pt;
  list-style-type: none;
  padding: 0;
}


.all-comments ul {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 3cm;
  font-size: 15pt;
  list-style-type: none;
}

.new-comment ul {
  font-family: 'Open Sans Condensed', sans-serif;
  padding-left: 2cm;
  font-size: 15pt;
  list-style-type: none;
}

.links {
  padding-left: 2cm;
  padding-top: 5mm;
}

.links a, .links a:visited, .links a:active {
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 15pt;
  color: #295499;
}

.all-user-comments ul {
  font-family: 'Open Sans Condensed', sans-serif;
  font-size: 13pt;
  list-style-type: none;
}

.book-search, .upload {
  padding-left: 1cm;
}

.upload-submit {
  padding-top: 0.5em;
  padding-left: 1cm;
}

